--- a/public/css/app.css
+++ b/public/css/app.css
@@ -169,13 +169,13 @@ sup {
 }
 
 a {
-  color: #007bff;
+  color: #E84545;
   text-decoration: none;
   background-color: transparent;
 }
 
 a:hover {
-  color: #0056b3;
+  color: #560b0b;
   text-decoration: underline;
 }
 
@@ -3537,11 +3537,11 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #007bff;
+  color: #E84545;
 }
 
 .btn-link:hover {
-  color: #0056b3;
+  color: #560b0b;
   text-decoration: underline;
 }
 
@@ -5652,14 +5652,14 @@ input[type="button"].btn-block {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #007bff;
+  color: #E84545;
   background-color: #fff;
   border: 1px solid #dee2e6;
 }
 
 .page-link:hover {
   z-index: 2;
-  color: #0056b3;
+  color: #560b0b;
   text-decoration: none;
   background-color: #e9ecef;
   border-color: #dee2e6;
